--- a/Frontend/src/style/GaleriaPage.css
+++ b/Frontend/src/style/GaleriaPage.css
@@ -1,14 +1,7 @@
 .galeria {
     display: flex;
-    flex: wrap;
-    justify-content: flex-start;
-}
-
-.galeria img {
-    width: 18%;
-    border: 1px solid white;
-    padding: 0,3cm;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    margin-right: 2%;
+    justify-content: space-between;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    align-items: center;
+    width: 20%; 
 }
